[package]
name = "rcnb-rs"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Everything can be encoded into RCNB with Rust."
homepage = "https://docs.rs/rcnb-rs"
documentation = "https://docs.rs/rcnb-rs"
repository = "https://github.com/juzi5201314/rcnb-rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
argh = "0.1.3"

[dev-dependencies]
rand = "0.7.3"
paste = "1.0.0"
byte-unit = "4.0.9"

[profile.release]
lto = true

[profile.bench]
opt-level = 3
lto = true